# MCPPServerSoftware

./: .gitignore  CMakeLists.txt  MCPPServerSoftware.cpp  MCPPServerSoftware.h  README.md  build.sh  cmake_install.cmake
io/: configs.cpp  configs.h  json.cpp  json.h  logger.cpp  logger.h
minecraft/chat/: commands.cpp  commands.h
networking/: hash.h
networking/packets/: packet.cpp  packet.h
server/: client.cpp  client.h  minecraft_server.cpp  minecraft_server.h
threads/: thread_pool.cpp  thread_pool.h
util/component/: text_components.cpp  text_components.h
util/identifiers/: indentifier.h  uuid.h
